# solax-cloud-mcp

./: .dockerignore  .env.example  .env.swp  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  HTTP_API.md  README.md  docker-compose.yml  pyproject.toml
src/solax_cloud_mcp/: .config.py.swp  __init__.py  __main__.py  auth.py  client.py  config.py  http_server.py  models.py  server.py
tests/: test_client.py  test_config.py  test_models.py
tests/fixtures/: battery_realtime_success.json  inverter_realtime_success.json  realtime_success.json
