[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solax-cloud-mcp"
version = "0.1.0"
description = "MCP server for real-time SolaX Cloud solar inverter data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Gary Mason", email = "masongary44@gmail.com"}]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "fastapi>=0.104",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
solax-cloud-mcp = "solax_cloud_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
